# CPPlibTest

./: .gitignore  CMakeLists.txt
A/: CMakeLists.txt  main.cpp  main.mm
B/: CMakeLists.txt  library1.cpp  library1.h  library1.mm
