cmake_minimum_required(VERSION 3.17)
project(cppPlayground2)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

#add_executable(cppPlayground2 main.cpp)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
if(WIN32)
#   UTF8    ...
    add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
    add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
    if (IS_UWP)
        message("build is uwp")
        add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/ZW>")
        add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/EHsc>")
        add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/permissive->")
        add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/W4>")
        add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/Zc:twoPhase->")
        set(CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION "10.0.18362.0")
    else ()
    endif()
endif()
add_subdirectory(A)
add_subdirectory(B)