set(BINARY ${PROJECT_NAME})
file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.hpp *.cpp *.c *.cxx *.mm)
set(SOURCES ${SOURCES})

if(WIN32)
set(CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS_SKIP FALSE)
set(CMAKE_INSTALL_UCRT_LIBRARIES TRUE)
set(CMAKE_INSTALL_UCRT_LIBRARIES TRUE)
include(InstallRequiredSystemLibraries)
endif()

add_executable(${BINARY} ${SOURCES})
message("CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION = ${CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION}")
message("CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS = ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS}")



target_link_libraries(${BINARY}
        PRIVATE ${PROJECT_NAME}_lib
        )
